# mcp

./: LICENSE  README.md  check_mcp_module.py  check_mcp_structure.py  enhanced_feedback_config.yaml  enhanced_mcp_config.txt  enhanced_mcp_server.py  gui_web_interfaces.py  install.sh  mcp_config_example.json  mcp_config_windows.json  pyproject.toml  requirements.txt  server.py  start_server.bat  start_server.sh  test_server.py
plugins/: __init__.py  custom_plugin.py  example_plugin.py
templates/: custom_template.yaml
